HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchRequiresParallelContext/Source/Main.uv
//! Rejected structured-parallelism specimen for dispatch context requirements.

public procedure dispatchRequiresParallelContextReference() -> () {
    dispatch index in 0usize..4usize {
        index
    }
}
